--- a/client/package.json
+++ b/client/package.json
@@ -1,21 +1,20 @@
 {
   "name": "school-management-client",
   "version": "1.0.0",
-  "proxy": "http://localhost:5555",
-  "dependencies": {
-    "formik": "^2.4.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "yup": "^1.7.1"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0",
+    "react-scripts": "5.0.1",
+    "formik": "^2.4.3",
+    "yup": "^1.3.2",
+    "web-vitals": "^2.1.4"
   },
   "browserslist": {
     "production": [
